# RAG-Chatbot

./: .gitignore  README.md  pyproject.toml  test_pipeline.py
app/: main.py
src/: chunker.py  embedder.py  llm.py  pipeline.py  retriever.py  scraper.py  vectordb.py
